# multiagentes

./: .gitignore  AUDITORIA_PRONTIDAO_MULTIAGENTE.md  AUDITORIA_RESULTADO.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  COMO_USAR.md  COMO_USAR_GLOBAL.md  DOCUMENTO_MESTRE.md  IMPLEMENTACAO.md  INICIO_RAPIDO.md  INSTALACAO_COMPLETA.md  PLANO_FASE5.md  PLANO_FASE6.md  README.md  agentes.py  claude_skills.py  install.bat  install_global.py  pyproject.toml  pytest.ini  teste.py
.codex/: hooks.json
config/: agents.yaml
scripts/: eval_contrato.py  eval_enforcement.py  eval_executor_prompts.py  eval_planner_prompts.py  eval_prompts.py  eval_reviewer_loop.py  eval_reviewer_prompts.py  eval_run_pipeline.py  test_e2e.py  test_execution_loop.py  test_local_provider.py  test_pipeline_e2e.py  test_tier_router.py  test_tools.py  test_worktree.py
skills/: manifest.yaml
src/: __init__.py  __main__.py
src/agents/: __init__.py
src/multiagentes/: __init__.py
src/orchestration/: __init__.py  base.py  context_manager.py  enforcement.py  execution_loop.py  hybrid_router.py  router.py
src/providers/: __init__.py  base.py  local_qwen.py
src/routing/: __init__.py  cost_ledger.py  task_classifier.py  tier_router.py
src/schemas/: __init__.py  agent.py  contract.py  findings.py  plano.py  verdict.py
src/skills/: __init__.py  auditoria.py  auditoria.py.bak  contrato.py  implementar.py  plano.py  run.py
src/tools/: __init__.py  base.py  filesystem.py  git.py  git_rollback.py  registry.py  shell.py  worktree.py
src/validators/: __init__.py  base.py  (+5 more)
tests/: conftest.py
(+39 files in other folders)
